# makoto-lite-llm

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5f33d5191f3b_initial_schema.py
docs/plans/: 2026-03-22-auth-system-plan.md
docs/specs/: 00-overview.md  2026-03-22-advanced-apis-design.md  2026-03-22-auth-system-design.md  2026-03-22-cache-design.md  2026-03-22-core-sdk-design.md  2026-03-22-dashboard-design.md  2026-03-22-guardrails-design.md  2026-03-22-observability-design.md  2026-03-22-router-design.md  2026-03-22-spend-budgets-design.md
docs/superpowers/plans/: 2026-04-06-api-key-auth-rbac.md  2026-04-06-rate-limit-spend-audit.md  2026-04-06-sso-config-oauth2-stub.md  2026-04-14-sso-real-oidc.md  2026-04-17-keycloak-e2e-test.md  2026-05-04-core-sdk-openai.md  2026-05-05-anthropic-provider.md  2026-05-06-proxy-http-routes.md
docs/superpowers/specs/: 2026-04-06-sso-config-design.md  2026-04-16-keycloak-e2e-test-design.md  2026-04-30-core-sdk-openai-design.md  2026-05-05-anthropic-provider-design.md  2026-05-06-proxy-http-routes-design.md
scripts/: generate_migration.py
src/app/: config.py  database.py  exceptions.py  main.py
src/app/auth/: api_key_auth.py  crypto.py  dependencies.py  jwt_handler.py
src/app/models/: __init__.py  api_key.py  audit.py  base.py  budget.py  membership.py  organization.py  password_reset_token.py  permission.py  project.py  refresh_token.py  spend.py  sso_config.py  team.py  user.py
src/app/routes/: auth_routes.py  budget_routes.py  key_routes.py  org_routes.py  proxy_routes.py  sso_routes.py  team_routes.py  user_routes.py
src/app/schemas/: auth.py  budget.py  common.py  key.py  org.py  sso.py  team.py  user.py
src/app/sdk/: __init__.py  cost.py  exceptions.py  http_client.py  main.py  model_prices.json  resolver.py  types.py
src/app/services/: audit_service.py  auth_service.py  budget_service.py  key_service.py  oidc_client.py  org_service.py  permission_service.py  proxy_guard.py  rate_limiter.py  spend_service.py  sso_service.py  team_service.py  user_service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_smoke_keycloak.py  test_sso_keycloak.py
tests/e2e/fixtures/: litellm-realm.json
tests/test_auth/: test_api_key_auth.py  test_api_key_middleware.py  test_crypto.py  test_get_current_api_key.py  test_jwt_handler.py  test_password.py  test_rbac.py
tests/test_integration/: test_full_auth_flow.py
tests/test_models/: test_auth_models.py  test_core_models.py
tests/test_proxy/: test_proxy_live.py
tests/test_routes/: test_auth_routes.py  test_budget_routes.py  test_chat_schemas.py  test_key_routes.py  test_org_routes.py  test_proxy_routes.py  test_sso_routes.py  test_team_routes.py  test_user_routes.py
tests/test_sdk/: test_acompletion.py  test_anthropic_live.py  test_cost.py  test_exceptions.py  test_http_client.py  test_openai_live.py  test_resolver.py  test_types.py
tests/test_services/: test_audit_service.py  test_oidc_client.py  test_permission_service.py  test_proxy_guard.py  test_rate_limiter.py  test_spend_service.py  test_sso_service.py
(+22 files in other folders)
